--- a/app/src/main/res/menu/menu_list_cards.xml
+++ b/app/src/main/res/menu/menu_list_cards.xml
@@ -3,7 +3,7 @@
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/startNewCard"
+        android:id="@+id/start_new_card"
         android:icon="@drawable/outline_add_24"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
@@ -14,7 +14,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         />
 
     <item
-        android:id="@+id/packDetails"
+        android:id="@+id/pack_details"
         android:icon="@drawable/outline_info_24"
         android:orderInCategory="200"
         app:showAsAction="ifRoom"
@@ -25,7 +25,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         />
 
     <item
-        android:id="@+id/changeFrontBack"
+        android:id="@+id/change_front_back"
         android:icon="@drawable/outline_info_24"
         android:orderInCategory="200"
         app:showAsAction="never"
@@ -36,7 +36,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         />
 
     <item
-        android:id="@+id/sortRandom"
+        android:id="@+id/sort_random"
         android:icon="@drawable/outline_info_24"
         android:orderInCategory="200"
         app:showAsAction="never"
