--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="icon" tools:keep="@color/icon">#46BB7A</color>
     <color name="warn_red">#ff00ee</color>
     <color name="ijblue">#1b2c66</color>
-    <color name="darkRed">#550000</color>
-    <color name="darkGreen">#005500</color>
+    <color name="dark_red">#550000</color>
+    <color name="dark_green">#005500</color>
 </resources>
