--- a/app/src/main/res/layout/dia_confirm.xml
+++ b/app/src/main/res/layout/dia_confirm.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/dia_del_desc"
+        android:id="@+id/dia_confirm_desc"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/transparent"
         android:textSize="25sp"
@@ -23,11 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/yes"
-        android:id="@+id/dia_del_yes"
+        android:id="@+id/dia_confirm_yes"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/transparent"
         android:textSize="20sp"
-        android:layout_below="@id/dia_del_desc"
+        android:layout_below="@id/dia_confirm_desc"
         android:textColor="@color/light_black"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
@@ -36,11 +36,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no"
-        android:id="@+id/dia_del_no"
+        android:id="@+id/dia_confirm_no"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/transparent"
         android:textSize="20sp"
-        android:layout_below="@id/dia_del_yes"
+        android:layout_below="@id/dia_confirm_yes"
         android:textColor="@color/light_black"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
