--- a/app/src/main/res/layout/activity_edit_collection.xml
+++ b/app/src/main/res/layout/activity_edit_collection.xml
@@ -29,7 +29,8 @@
                 android:ems="10"
                 android:textColor="@color/light_black"
                 android:textColorHint="@color/light_black"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:hint="@string/collection_or_pack_name"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -48,7 +49,8 @@
                 android:ems="10"
                 android:textColor="@color/light_black"
                 android:textColorHint="@color/light_black"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:hint="@string/collection_or_pack_desc"/>
 
             <TextView
                 android:id="@+id/edit_collection_go"
