--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <color name="white">#FFFFFFFF</color>
     <color name="light_grey">#ededff</color>
     <color name="dark_grey">#555577</color>
     <color name="button">#000044</color>
     <color name="background">#f1f1ff</color>
     <color name="light_black">#343455</color>
-    <color name="icon" tools:keep="@color/icon">#46BB7A</color>
     <color name="warn_red">#ff00ee</color>
     <color name="ijblue">#1b2c66</color>
     <color name="dark_red">#550000</color>
