--- a/app/src/main/res/layout/dia_rec.xml
+++ b/app/src/main/res/layout/dia_rec.xml
@@ -4,12 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:id="@+id/rec_default_root"
     android:gravity="center">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rec_default"
+        android:id="@+id/dia_rec"
         android:layout_margin="20dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
