--- a/app/src/main/res/menu/menu_view_pack.xml
+++ b/app/src/main/res/menu/menu_view_pack.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:icon="@drawable/baseline_edit_24"
         android:orderInCategory="100"
@@ -10,8 +9,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_height="wrap_content"
         android:title="@string/edit"
         android:onClick="editPack"
-        />
-
+    />
     <item
         android:icon="@drawable/baseline_delete_24"
         android:orderInCategory="200"
@@ -20,7 +18,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_height="wrap_content"
         android:title="@string/delete"
         android:onClick="deletePack"
-        />
-
-
+    />
+    <item
+        android:id="@+id/move_pack"
+        android:orderInCategory="300"
+        app:showAsAction="never"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:title="@string/move"
+        android:onClick="movePack"
+    />
 </menu>
