--- a/app/src/main/res/menu/menu_list_collections.xml
+++ b/app/src/main/res/menu/menu_list_collections.xml
@@ -7,7 +7,7 @@
         app:showAsAction="ifRoom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:title="@string/add"
+        android:title="@string/new_collection"
         android:onClick="startNewCollection"
     />
     <item
