--- a/app/src/main/res/menu/menu_list_packs.xml
+++ b/app/src/main/res/menu/menu_list_packs.xml
@@ -8,7 +8,7 @@
         app:showAsAction="ifRoom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:title="@string/add"
+        android:title="@string/new_pack"
         android:onClick="startNewPack"
     />
     <item
