--- a/app/src/main/res/layout/rec_view.xml
+++ b/app/src/main/res/layout/rec_view.xml
@@ -12,7 +12,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="@dimen/rec_view_font_size_default"
             android:id="@+id/rec_name"
             android:textColor="@android:color/black"
         />
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="@dimen/rec_view_font_size_below_default"
             android:layout_marginTop="2dp"
             android:id="@+id/rec_desc"
             android:visibility="gone"
