--- a/app/src/main/res/menu/menu_list_collections.xml
+++ b/app/src/main/res/menu/menu_list_collections.xml
@@ -33,6 +33,14 @@
         app:showAsAction="never"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:title="@string/advanced_search"
+        android:onClick="startAdvancedSearch"
+    />
+    <item
+        android:orderInCategory="200"
+        app:showAsAction="never"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:title="@string/settings"
         android:onClick="startSettings"
     />
