--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -72,7 +72,7 @@
                     android:layout_height="20dp"
                     android:id="@+id/settings_format_cards"
                     android:buttonTint="@color/ijblue"
-                    android:onClick="setFormatCards"/>
+                    android:onClick="setFormatCards" />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -81,15 +81,14 @@
                     android:paddingEnd="5dp"
                     android:text="@string/settings_format_cards"
                     android:textColor="@color/light_black"
-                    android:layout_weight="2"/>
+                    android:layout_weight="2" />
                 <ImageButton
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/outline_info_24"
                     android:background="@android:color/transparent"
                     android:onClick="infoFormatCards"
-                    app:tint="@color/ijblue">
-                </ImageButton>
+                    app:tint="@color/ijblue"></ImageButton>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -102,7 +101,7 @@
                     android:layout_height="20dp"
                     android:id="@+id/settings_format_card_notes"
                     android:buttonTint="@color/ijblue"
-                    android:onClick="setFormatCardNotes"/>
+                    android:onClick="setFormatCardNotes" />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -111,7 +110,7 @@
                     android:paddingEnd="5dp"
                     android:text="@string/settings_format_card_notes"
                     android:textColor="@color/light_black"
-                    android:layout_weight="2"/>
+                    android:layout_weight="2" />
             </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
@@ -131,7 +130,7 @@
                     android:layout_height="20dp"
                     android:id="@+id/settings_ui_background_images"
                     android:buttonTint="@color/ijblue"
-                    android:onClick="setUIBackground"/>
+                    android:onClick="setUIBackground" />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -140,7 +139,7 @@
                     android:paddingEnd="5dp"
                     android:text="@string/settings_ui_background_images"
                     android:textColor="@color/light_black"
-                    android:layout_weight="2"/>
+                    android:layout_weight="2" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -153,7 +152,7 @@
                     android:layout_height="20dp"
                     android:id="@+id/settings_ui_increase_font_size"
                     android:buttonTint="@color/ijblue"
-                    android:onClick="setUIFontSize"/>
+                    android:onClick="setUIFontSize" />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -162,7 +161,36 @@
                     android:paddingEnd="5dp"
                     android:text="@string/settings_ui_increase_font_size"
                     android:textColor="@color/light_black"
-                    android:layout_weight="2"/>
+                    android:layout_weight="2" />
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:textSize="20sp"
+                android:text="@string/settings_list"
+                android:textColor="@android:color/black" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical|start">
+                <CheckBox
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:id="@+id/settings_list_no_update"
+                    android:buttonTint="@color/ijblue"
+                    android:onClick="setListNoUpdate" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:text="@string/settings_list_no_update"
+                    android:textColor="@color/light_black"
+                    android:layout_weight="2" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
