redesigned lists and more, db changes

--- a/app/src/main/res/layout/activity_edit_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_edit_collection_or_pack.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
     android:id="@+id/root_edit_pack"
     android:gravity="center">
@@ -58,6 +59,7 @@
             <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -65,6 +67,24 @@
                     android:orientation="horizontal"
                     android:id="@+id/color_picker" />
             </HorizontalScrollView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:textColor="@color/light_black"
+                android:labelFor="@id/edit_pack_emoji"
+                android:text="@string/collection_or_pack_emoji" />
+            <com.vanniktech.emoji.EmojiEditText
+                android:id="@+id/edit_pack_emoji"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:textColor="@color/light_black"
+                android:textColorHint="@color/light_black"
+                android:inputType="text"
+                android:longClickable="false"
+                android:hint="@string/collection_or_pack_emoji" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
