--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryVariant">@color/ijblue</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/ijblue</item>
+        <item name="android:statusBarColor">@color/ijblue</item>
         <!-- Default background color. -->
         <item name="android:windowBackground">@color/background</item>
         <!-- No animations. -->
