--- a/app/src/main/res/xml/licenses.xml
+++ b/app/src/main/res/xml/licenses.xml
@@ -24,6 +24,11 @@
     </item>
     <item>
         <identifier>Apache-2.0</identifier>
+        <projectDev>vanniktech</projectDev>
+        <projectName>Emoji (com.vanniktech:emoji-twitter)</projectName>
+    </item>
+    <item>
+        <identifier>Apache-2.0</identifier>
         <projectDev>Google</projectDev>
         <projectName>AndroidX (AppCompat [androidx.appcompat], ConstraintLayout [androidx.constraintlayout], Core [androidx.core], Room [androidx.room])</projectName>
     </item>
